--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -134,7 +134,7 @@ GER_krupp:0 "Friedrich Krupp AG Monopoly"
 GER_krupp_desc: "The Krupp dynasty is an almost 400-year-old Dynasty of Industrious Germans, who has fed the German war machine ever since the Thirty Years' War! It is time we put them in state employment again, as their talents will be badly needed with a new Weltkrieg on the horizon."
 GER_artillery_research:0 "Artillery research"
 GER_artillery_research_desc:0 ""
-GER_doctrine_armor:0 "Armored breakthrough"
+GER_doctrine_armor:0 "Armoured breakthrough"
 GER_doctrine_armor_desc:0 ""
 GER_hahn_meitner:0 "Hahn & Meitner"
 GER_hahn_meitner_desc:0 "Herr Hahn and Fräulein Meitner are both extremely talented physicists, Hahn discovered nuclear isomerism and Meitner is a department head at the Kaiser Wilhelm Institute! Together we believe the two can help create extremely powerful tools for society. And even more powerful weapons."
@@ -235,7 +235,7 @@ gerdom.4.t:0 "Problems with Grain Supply"
 gerdom.4.d:0 "With parts of our grain supply in the Baltic and the Ukraine no longer under our control, we have encountered severe problems. Let's hope this does not escalate as far as the horrible hunger winter of 1916/17..."
 gerdom.4.a:0 "Scheisse!"
 
-# Sale of Ceylon
+### Sale of Ceylon ###
 
 gerdom.7.t:0 "The Status of Ceylon"
 gerdom.7.d:0 ""
@@ -255,7 +255,7 @@ gerdom.9.a:0 "Great"
 gerdom.10.t:0 "The Princely Federation refused our offer"
 gerdom.10.d:0 "The Princely Federation has replied to our offer flatly stating that they do not want Ceylon. We can now only keep things as they are or allow natives more autonomy. What shall we do?"
 
-# Agricultural crisis in Mitteleuropa
+### Agricultural crisis in Mitteleuropa ###
 
 gerdom.11.t:0 "Agricultural Crisis in Mitteleuropa"
 gerdom.11.d:0 "During this time of great crisis, the agricultural sector of German economy is one of the most vulnerable to turmoil. With this in mind, several Junkers, representing the landed nobility of the Kingdom of Prussia, have asked for protectionist legislation and subsidies to their production. By imposing tariffs on foreign produce, we will strengthen this important sector of the Reich's economy. Such a measure is likely to cause further damage to the economy of our neighbours, however, as they are greatly dependant in trade with Germany. The wheat crops in the Ukraine are particularly vulnerable."
@@ -276,7 +276,7 @@ gerdom.14.t:0 "Halbstarke terrorise the cities"
 gerdom.14.d:0 "With the devastating economic situation, many families struggle to earn their daily bread and the social security net is strained beyond the breaking point. Now in the last weeks, the streets of many German cities have been increasingly terrorised by gangs of teenagers. These 'Halbstarke' steal products from the markets and shops, and often money from innocent pedestrians, or commit acts of vandalism, to escape boredom and frustration. More and more citizens do not feel safe anymore on the streets."
 gerdom.14.a:0 "Mein Gott! Shocking!"
 
-# Tirpitzprogramm
+### Tirpitzprogramm ###
 
 gerdom.15.t:0 "The 1934 Navy Program"
 gerdom.15.d:0 "The Kaiserliche Marine stands as the strongest Navy in the world in the year 1936, but many challenges will face it in the coming years. The expansionist Empire of Japan and resurgent Commune of France both are key future enemies to unseat German naval superiority across the world. \n\nIn 1934, we have begun a large naval construction plan, and the ships begun then are slowly begin finished. However, with our naval industry still limited, we will have to limit ourselves to one area of production. What should we focus on the next six months?"
@@ -297,7 +297,7 @@ gerdom.16.h:0 "More destroyers."
 gerdom.16.i:0 "More U-Boats."
 gerdom.16.j:0 "The program has been fulfilled!"
 
-# Schleicher and the GVLP
+### Schleicher and the GVLP ###
 
 gerdom.17.t:0 "Kurt von Schleicher and the DVLP"
 gerdom.17.d:0 "'Scandal! Scandal! Reichskanzler von Schleicher observed dining with Alfred von Hugenberg! Scandal!' cry the newspaper boys today. The prestigious Berliner Tagblatt, already responsible for the publication of the infamous Osthilfeskandal in 1923 that led to the end of the Ludendorff regime, has landed another coup. \n\nA reporter was able to observe and even partially overhear a conversation between Reichskanzler Kurt von Schleicher and the leader of the reactionary Junker party DVLP, Alfred von Hugenberg, at a Berlin varieté. The lower standing of the establishment only adds to the scandal. \n\nAnd while crowds come together to discuss the news, one topic is the most interesting; What will be the Kaisers reaction once he opens his morning newspaper?"
@@ -306,7 +306,7 @@ gerdom.17.b:0 "THE SOCIAL DEMOCRATS CAN'T BE WORSE!"
 gerdom.17.c:0 "TIME FOR BRÜNING!"
 gerdom.17.e:0 "Damn faked news..."
 
-# Election of 1937
+### Election of 1937 ###
 
 gerdom.27.t:0 "Elections of 1937"
 gerdom.27.d:0 "Today, the German people will elect their representative to the Reichstag! The elections have been tightly fought, and the results are awaited with much anticipation. The fate of several parties and, of course, the Kaiserreich itself could be decided today. \n\nIf the Social Democrats manage to secure enough votes, the 'realist' wing of the Social Liberal FVP - led by a woman, no less! - will form a coalition with them. Another possibility would be a coalition of nearly all liberal and burgeois parties - NLP, FVP and Bavarian splinter party BVP - against the predominance of the DKP, led by the beloved Lion of Africa, Paul von Lettow-Vorbeck. Or the DKP could just continue their comfortable majority. \n\nWho shall win?"
@@ -337,7 +337,7 @@ gerdom.32.t:0 "It's war!"
 gerdom.32.d:0 "There can be no distractions! We are at War with the Syndicalist forces! It’s a battle for the very soul of our great empire and we must focus on winning it!"
 gerdom.32.a:0 "No elections until we stand in Paris!"
 
-# Election of 1942
+### Election of 1942 ###
 
 gerdom.33.t:0 "1942 German Elections"
 gerdom.33.d:0 "Today the German people will elect their representative to the Reichstag! Tightly fought this election might decide the fate of the Kaiserreich! Who will win?"
@@ -347,7 +347,7 @@ gerdom.34.d:0 "Following a victory of the SPD and FVP coalition in the elections
 gerdom.34.a:0 "The Kaiser appoints Hans Vogel of the SPD"
 gerdom.34.c:0 "Compromise. FVP leader, Walther von Rathenau"
 
-# Election of 1947
+### Election of 1947 ###
 
 gerdom.36.t:0 "1947 German Elections"
 gerdom.36.d:0 "Today the German people will elect their representative to the Reichstag! A tightly fought election this 1947 election might yet bring surprising results for the Kaiserreich. Will the coalition of centre-left parties emerge victorious or will the more hard-line parties win the election?"
@@ -416,7 +416,7 @@ gerdom.51.d:0 "Now with our Vaterland at war with the Commune of France, the pri
 gerdom.51.a:0 "Disband the leftists organisation and arrest the top ringleaders."
 gerdom.51.b:0 "Ich sehe keine Parteien mehr, sondern nur noch Deutsche!"
 
-# General Strike
+### General Strike ###
 
 gerdom.52.t:0 "The Free Workers Union of Germany"
 gerdom.52.d:0 "The Free Workers Union of Germany (German: Freie Arbeiter Union Deutschlands; FAUD) is an anarcho-syndicalist trade union operating in Germany since its creation on September 15, 1919. They have been free to operate until now, but we have found proof that their leaders are in contact with syndicalist organisations in other nations, such as the CNT-FAI in Spain. We also suspect they may be plotting against the Kaiser!"
@@ -464,7 +464,7 @@ gerdom.61.d:0 "Although the general strike in the Rhineland is finally over our 
 gerdom.61.a:0 "Such insolence shan't be tolerated!"
 gerdom.61.b:0 "We need solid proof of syndicalist involvement!"
 
-# Death events
+### Death Events ###
 
 gerdom.62.t:0 "Johann von Bernstorff dies"
 gerdom.62.d:0 "Former ambassador to the USA and the Ottoman Empire and former State Secretary for the Interior, Johann von Bernstroff has died today."
@@ -481,7 +481,7 @@ gerdom.65.d:0 "Admiral Wilhelm Souchon, a hero of the Weltkrieg and a Großadmir
 gerdom.66.t:0 "Georg Bruchmüller dies"
 gerdom.66.d:0 "Feldmarschall Bruchmüller a hero of the Weltkrieg and developer of modern artillery tactics, has passed away today."
 
-# The Kaiserbund
+### The Kaiserbund ###
 
 gerdom.72.t:0 "Status of Indonesia"
 gerdom.72.d:0 "As part of our Kaiserbund program we have decided to make our Indonesian holdings a semi-autonomous state in our empire. How would we like to divide the lands?"
@@ -648,7 +648,7 @@ gerdom.205.t:0 "The Rhineland is silent"
 gerdom.205.d:0 "With many of the worst troublemakers abroad to fight and hopefully die, the Rhineland is finally seeing some peace and quiet."
 gerdom.205.a:0 "Let's hope things stay this way..."
 
-gerdom.206.t:0 "Syndicalist Sympthasisers want to return home"
+gerdom.206.t:0 "Syndicalist Sympathisers want to return home"
 gerdom.206.d:0 "Now that their war has been lost, the 'International Divisions' formed from our volunteers are trying to return to their homes. Many still have their arms and all survivors are battle-hardened, indoctrinated Syndicalists. However, if we prohibit them from entering over our borders, we should be able to keep them away without to big of a scandal. But we might risk them turning against us if we ever come to to blows with the Internationale..."
 gerdom.206.a:0 "They'll have to serve their term in the Heer!"
 gerdom.206.b:0 "They can return to their families."
