--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -37,6 +37,7 @@ HAW_peoples_victory:0 "People's Victory"
 HAW_peoples_victory_desc:0 ""
 HAW_constitution:0 "Hawaii's Constitution"
 HAW_constitution_desc:0 ""
+
 ### Economy Foci ###
 HAW_building_our_economy:0 "Building Our Economy"
 HAW_building_our_economy_desc:0 ""
@@ -299,6 +300,6 @@ hawaii.34.a:0 ""
 
 
 hawaii.21.t:0 "The rise of Native Nationalism"
-hawaii.21.d:0 "With our nation having been free for some time now, the natives have organised a movement for the restoration of the Hawaiian monarchy. While this would normally be a source of great concern, considering the deposed family has married into the industrial families, a restoration would be benefical... The current pretender to the throne, Edward D. Kawananakoa, would be easy to control. A monarchy would expand our nation's cultural independence, and give the populace a figurehead..."
+hawaii.21.d:0 "With our nation having been free for some time now, the natives have organised a movement for the restoration of the Hawaiian monarchy. While this would normally be a source of great concern, considering the deposed family has married into the industrial families, a restoration would be beneficial... The current pretender to the throne, Edward D. Kawananakoa, would be easy to control. A monarchy would expand our nation's cultural independence, and give the populace a figurehead..."
 hawaii.21.a:0 "Restore the monarchy!"
 
