--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -92,7 +92,7 @@ POL_pride_of_the_baltic:0 "Pride of the Baltic"
 POL_polish_marines:0 "Foreign Polish Expeditions"
 POL_naval_industry:0 "Naval Buildup in Gdansk"
 POL_gdansk_agreement:0 "The Danzig Agreement"
-POL_sieze_gdansk:0 "Sieze Gdansk"
+POL_sieze_gdansk:0 "Seize Gdansk"
 POL_poland_forever:0 "Poland Forever"
 POL_beacon_of_polish_spirit:0 "Beacon of Polish Spirit"
 POL_not_yet_lost:0 "Not Yet Lost"
@@ -298,9 +298,9 @@ POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_CZA_AUS:0 "Elected J.K.W. Eustachy I Sapieha"
 POL_CZA_GER:0 "Elected J.K.W. Eustachy I Sapieha"
-POL_SHUNNED_US:0 "The poles have shuned us"
+POL_SHUNNED_US:0 "The poles have shunned us"
 POL_DEFIED_US:0 "The poles defied us"
-POL_SHUNNED_US_BIG:0 "The poles have shuned us"
+POL_SHUNNED_US_BIG:0 "The poles have shunned us"
 POL_LIT_SEP:0 "No Polish-Lithuanian Commonwealth"
 POL_JOIN_MITT:0 "Poland joins Mitteleuropa"
 POL_NO_JOIN_MITT:0 "Poland don't join Mitteleuropa"
@@ -877,7 +877,7 @@ poland.133.b:0 "We don't need them!"
 poland.134.t:0 "Reincorporating Lithuania"
 poland.134.d:0 "to-do"
 poland.134.a:0 "They are safer under our protection."
-poland.135.t:0 "Poland Seeks Our Submittance" #Submittance isn't a word
+poland.135.t:0 "Poland Seeks Our Submittance"           #Submittance isn't a word!
 poland.135.d:0 "to-do"
 poland.135.a:0 "Unfortunately, we need them."
 poland.135.b:0 "Never!"
