--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -384,7 +384,7 @@ MEX_Military_Industrialisation:0 "Military Industrialisation"
 MEX_Mexican_Cars:0 "Mexican Automobile Industry"
 MEX_Modernise_The_Ejidos:0 "Modernise The Ejidos"
 MEX_Steel_Production:0 "Construct Steel Factories"
-MEX_Industrial_Mobilization:0 "Industrial Mobilzation"
+MEX_Industrial_Mobilization:0 "Industrial Mobilisation"
 MEX_Nationalise_Oil:0 "Nationalise The Oil Industry"
 MEX_Legacy_Of_Zapata:0 "Legacy Of Zapata"
 MEX_Mexican_Socialism:0 "Mexican Socialism"
@@ -399,7 +399,7 @@ MEX_Native_Aut:0 "Native Autonomies"
 MEX_Ejido_Militias:0 "Ejido Militias"
 MEX_Adopt_Syndicalism:0 "Adopt Syndicalism"
 MEX_Empower_Unions:0 "Empower The Unions"
-MEX_Encourage_Urbanization:0 "Encourage Urbanization"
+MEX_Encourage_Urbanization:0 "Encourage Urbanisation"
 MEX_Union_Ejido_Coop:0 "Union-Ejido Cooperation"
 MEX_Improve_Union_Management:0 "Improve Union Management"
 MEX_Build_New_Factories:0 "Build New Factories"
@@ -412,7 +412,7 @@ MEX_Storm_The_Rigs:0 "Storm The Rigs"
 MEX_Socialist_Science:0 "Socialist Science"
 MEX_Moderate_Victory:0 "Moderate Victory"
 MEX_Cardenas_Land_Reform:0 "Land Reform"
-MEX_Guarentee_Rights:0 "Guarentee Worker's Rights"
+MEX_Guarentee_Rights:0 "Guarantee Worker's Rights"
 MEX_Improve_Transportation_System:0 "Improve Transportation System"
 MEX_Compromise_With_The_Church:0 "Compromise With The Church"
 MEX_Rural_Education:0 "Rural Education"
