More work on Poland. Fixing political oddities.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 ### Ideas ###
-Held_Elections:0 "Recently held elections"
+Held_Elections:0 "Recently Held Elections"
 Funding_UKR_Partisans:0 "Funding partisans in Poland"
 sell_bucovina:0 "Sold Bucovina"
 buy_bucovina:0 "Bought Bucovina"
@@ -374,14 +374,14 @@ poland.6.d:0 "Now we face two crises, a weak economy and a crisis of authority c
 poland.6.a:0 "Liberalise, introduce more democracy in Poland"
 poland.6.b:0 "The government collapses!"
 poland.6.c:0 "Invite the military to form a new government"
-poland.7.t:0 "Time to choose"
-poland.7.d:0 "Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. The authorities are sceptical about their own ability to retain power so they decided to give up and...."
-poland.7.a:0 "Syndicalists take over!"
-poland.7.b:0 "Nationalists take over!"
+poland.7.t:0 "Chaos in the Countryside"
+poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
+poland.7.a:0 "The Syndicalists take over!"
+poland.7.b:0 "The Nationalists take over!"
 poland.8.t:0 "Constitution"
 poland.8.d:0 "After the Regency Council promised sweeping reforms, we now have to think about what the reforms should actually entail."
 poland.8.a:0 "Long live the Republic!"
-poland.8.b:0 "Allow the Regency Council to select the next king"
+poland.8.b:0 "The Regency Council must elect a king! Now!"
 poland.9.t:0 "Another attempt at a King of Poland"
 poland.9.d:0 "Just after the Weltkrieg, the Regency Council made an attempt to elect a king of Poland. This attempt, however, was stalled by the Polish inability to firmly support a single candidate and by the Central Powers' apparent lack of interest. Now, with the 20th anniversary of Kingdom of Poland's proclamation approaching, the Regency Council wants to make one last attempt."
 poland.9.a:0 "Let us try again"
@@ -720,9 +720,9 @@ poland.91.t:0 "One of our ministers has died"
 poland.91.d:0 "Our nation mourns as one of our ministers passed away. Even now, our nation and the minister's office have to move onward. A new minister has to be put in office."
 poland.91.a:0 "Okay"
 poland.92.t:0 "Brest-Litovsk"
-poland.92.d:0 "Kaiser doesn't support Belarus anymore than Poland, so this is a good chance to regain Brest Litovsk, a city populated mostly by Poles, but belonging to Belarus."
-poland.92.a:0 "Press claims"
-poland.92.b:0 "It's bad idea"
+poland.92.d:0 "Now that the Kaiser doesn't support Belarus anymore than he does us, this is an excellent chance to regain Brest-Litovsk, a city populated mostly by Poles, but belonging to Belarus."
+poland.92.a:0 "Press our claims!"
+poland.92.b:0 "It's bad idea..."
 poland.92.t:0 "Poland demands territory!"
 poland.93.d:0 "The Polish government has demanded that we cede the city of Brest Litovsk to them. Otherwise, we may have to face some very disastrous consequences. The Kaiser has been silent. What shall we do?"
 poland.93.a:0 "We cannot hope to win, submit to their demands"
@@ -850,7 +850,7 @@ poland.126.d:0 "As tension mounts in the halls of Europe, the Regency Council ha
 poland.126.a:0 "A larger work space is critical!"
 poland.126.b:0 "Who cares?"
 poland.127.t:0 "The Council Regains Focus"
-poland.127.d:0 "Eventually, even the Regency Council feels the the pressure from the rising tension infiltrating Europe. After settling many petty disputes still being debated, the Regency Council seems finally poised to crown a new King of Poland in the coming weeks."
+poland.127.d:0 "Now, even the Regency Council is feeling the immense pressure from the growing chaos in Poland. After settling many petty disputes still being debated, the Regency Council seems finally poised to crown a new King of Poland in the coming days."
 poland.127.a:0 "Finally!"
 poland.128.t:0 "Joining the Austrian Federation"
 poland.128.d:0 "to-do"
@@ -996,6 +996,8 @@ POL_central_forts:0 "gains moderate defensive infrastructure."
 POL_RAD:0 "Karol Radek leads Poland"
 POL_ROZA:0 "Roza Luksemburg leads Poland"
 POL_JAKUB:0 "Jakub Hanecki leads Poland"
+pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists sieze control!§! \n"
+pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists sieze control!§! \n"
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
