More spelling fixes

--- a/localisation/KR_Germany_l_english.yml
+++ b/localisation/KR_Germany_l_english.yml
@@ -933,7 +933,7 @@ gerfla.1.d:0 "After the Franco-German war of 1870 to 1871, the Sedantag was esta
 gerfla.1.a:0 "Heil dem Kaiserreich!"
 
 gerfla.2.t:0 "Luise Hoffmann's pacific flight"
-gerfla.2.d:0 "Luise Hoffmann was the first German woman to gain a pilot's license. After her 1933 transatlantic solo flight she has become one of Germany's most famous aviation pioneers, along heroes like Manfred von Richthofen and Gunther Pluschow. Today, Fraulein Hoffmann has accomplished a new long distance record in her customised Fokker F-IX. Starting in Tahiti 36 hours ago, Fraulein Hoffmann today landed safely in Lae on German New Guinea, where she was welcomed by a jubilous crowd and governor Albert Hahl. \n\nIt has been rumored that Hoffmann will soon attempt a solo flight around the world. This would place her at a direct competition with the Red Baron who is planning a similar endeavour..."
+gerfla.2.d:0 "Luise Hoffmann was the first German woman to gain a pilot's license. After her 1933 transatlantic solo flight she has become one of Germany's most famous aviation pioneers, along heroes like Manfred von Richthofen and Gunther Pluschow. Today, Fraulein Hoffmann has accomplished a new long distance record in her customised Fokker F-IX. Starting in Tahiti 36 hours ago, Fraulein Hoffmann today landed safely in Lae on German New Guinea, where she was welcomed by a jubilous crowd and governor Albert Hahl. \n\nIt has been rumoured that Hoffmann will soon attempt a solo flight around the world. This would place her at a direct competition with the Red Baron who is planning a similar endeavour..."
 gerfla.2.a:0 "What an accomplishment!"
 
 gerfla.3.t:0 "Hoffmann vs von Richthofen"
@@ -991,7 +991,7 @@ GER_bunkrupt_fact:0 "An important industrial corporation declared bankruptcy"
 DCGB:0 "Deutscher-Christlicher Gewerkschaftsbund"
 GER_rhine_unrest:0 "Workers' Strike"
 GER_kill_workers:0 "Workers Suppressed"
-GER_strike_negot:0 "Agreed to strikers' demands"
+GER_strike_negot:0 "Agreed to striker's demands"
 GER_col:0 "Colonial Upkeep"
 GER_mil_mis:0 "German Military Mission"
 GER_quenched_militarism:0 "Quenched Militarism"
