--- a/localisation/KR_Hawaii_l_english.yml
+++ b/localisation/KR_Hawaii_l_english.yml
@@ -249,7 +249,7 @@ hawaii.19.b:0 "Peace will work better"
 hawaii.20.t:0 "Revolutionary Greetings From Hawaii"
 hawaii.20.d:0 "While we were fighting to bring the American Revolution over across the sea our comrades in Hawaii were also working to bring their own revolution to fruition. The Hawaiians have overthrown the plantation system and taken control of the island. We should extend our greetings and protection to the Hawaiians to prevent the reactionaries nations from trying to destroy the Hawaiian Revolution. "
 hawaii.20.a:0 "We shall protect you comrades!"
-hawaii.21.t:0 "Hawaii Pettions the League of American States"
+hawaii.21.t:0 "Hawaii Petitions the League of American States"
 hawaii.21.d:0 "Hawaii has recently sent a petition to Washington to join the League of American States. Should we welcome them into the League of American States or not?"
 hawaii.21.a:0 "Welcome them into the League"
 hawaii.21.b:0 "We don't need Hawaii"
