--- a/localisation/KR_Mexico_l_english.yml
+++ b/localisation/KR_Mexico_l_english.yml
@@ -395,7 +395,7 @@ MEX_Develop_Natural_Resources:0 "Develop Natural Resources"
 MEX_Increase_Exports:0 "Increase Exports"
 MEX_Expand_Ejidos:0 "Expand Ejidos"
 MEX_Improve_Conditions:0 "Improve Working Conditions"
-MEX_Native_Aut:0 "Native Autonomies"
+MEX_Native_Aut:0 "Native Autonomy"
 MEX_Ejido_Militias:0 "Ejido Militias"
 MEX_Adopt_Syndicalism:0 "Adopt Syndicalism"
 MEX_Empower_Unions:0 "Empower The Unions"
