--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -755,7 +755,7 @@ poland.100.d:0 "The Polish government has demanded that we cede the city Brest L
 poland.100.a:0 "We cannot hope to win, submit to their demands"
 poland.100.b:0 "We are ready to defend!"
 poland.101.t:0 "Belarus refused!"
-poland.101.d:0 "The Belarusian government has stated that they will not back down. What shall we do?"
+poland.101.d:0 "The Belorussian government has stated that they will not back down. What shall we do?"
 poland.101.a:0 "We must intervene directly!"
 poland.101.b:0 "Cut diplomatic ties"
 poland.101.c:0 "Back down"
@@ -877,7 +877,7 @@ poland.133.b:0 "We don't need them!"
 poland.134.t:0 "Reincorporating Lithuania"
 poland.134.d:0 "to-do"
 poland.134.a:0 "They are safer under our protection."
-poland.135.t:0 "Poland Seeks Our Submittance"           #Submittance isn't a word!
+poland.135.t:0 "Poland Seeks Our Submission"
 poland.135.d:0 "to-do"
 poland.135.a:0 "Unfortunately, we need them."
 poland.135.b:0 "Never!"
@@ -996,8 +996,8 @@ POL_central_forts:0 "gains moderate defensive infrastructure."
 POL_RAD:0 "Karol Radek leads Poland"
 POL_ROZA:0 "Roza Luksemburg leads Poland"
 POL_JAKUB:0 "Jakub Hanecki leads Poland"
-pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists sieze control!§! \n"
-pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists sieze control!§! \n"
+pol_nationalists_overthrow_monarchy:0 "§RThe Nationalists seize control!§! \n"
+pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
