Japanese now should react to Transamur expands without their permission + Added Lake Baikal Conflct events.

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -150,6 +150,149 @@ tram.37.a:0 "Give the Tuvans total freedom, once and for all!"
 tram.37.b:0 "Give the Tuvans freedom, but they shall remain loyal to us!"
 tram.37.c:0 "Tannu Tuva will be Russian once more!"
 
+tram.38.t:0 "The Japanese reaction"
+tram.38.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.38.a:0 "Demand Kamchatka and Okhotsk!"
+tram.38.b:0 "It is good to have strong client states!"
+tram.38.c:0 "Kolchak is too greedy for his own good, it is time to replace him."
+
+tram.39.t:0 "The Japanese reaction"
+tram.39.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.39.a:0 "Demand Kamchatka and Okhotsk!"
+tram.39.b:0 "It is good to have strong client states!"
+tram.39.c:0 "Wojciechowski is too greedy for his own good, it is time to replace him."
+
+tram.40.t:0 "The Japanese reaction"
+tram.40.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.40.a:0 "Demand Kamchatka and Okhotsk!"
+tram.40.b:0 "It is good to have strong client states!"
+tram.40.c:0 "Transamurian president is too greedy for his own good, it is time to replace him."
+
+tram.41.t:0 "The Japanese reaction"
+tram.41.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.41.a:0 "Demand Kamchatka and Okhotsk!"
+tram.41.b:0 "It is good to have strong client states!"
+tram.41.c:0 "Kolchak is too greedy for his own good, it is time to replace him."
+
+tram.42.t:0 "The Japanese reaction"
+tram.42.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.42.a:0 "Demand Kamchatka and Okhotsk!"
+tram.42.b:0 "It is good to have strong client states!"
+tram.42.c:0 "Wojciechowski is too greedy for his own good, it is time to replace him."
+
+tram.43.t:0 "The Japanese reaction"
+tram.43.d:0 "Our client state, the Transamur Republic, has established its control over parts of Siberia. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.43.a:0 "Demand Kamchatka and Okhotsk!"
+tram.43.b:0 "It is good to have strong client states!"
+tram.43.c:0 "Transamurian president is too greedy for his own good, it is time to replace him."
+
+tram.44.t:0 "The Japanese reaction"
+tram.44.d:0 "Our client state, the Transamur Republic, has established its control over Lake Baikal. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.44.a:0 "It is good to have strong client states!"
+tram.44.b:0 "Kolchak is too greedy for his own good, it is time to replace him."
+
+tram.45.t:0 "The Japanese reaction"
+tram.45.d:0 "Our client state, the Transamur Republic, has established its control over Lake Baikal. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.45.a:0 "It is good to have strong client states!"
+tram.45.b:0 "Wojciechowski is too greedy for his own good, it is time to replace him."
+
+tram.46.t:0 "The Japanese reaction"
+tram.46.d:0 "Our client state, the Transamur Republic, has established its control over Lake Baikal. While this is a fine addition to the Co-Prosperity Sphere it is possible that Transamur is becoming too powerful and needs to be restrained."
+tram.46.a:0 "It is good to have strong client states!"
+tram.46.b:0 "Transamurian president is too greedy for his own good, it is time to replace him."
+
+tram.47.t:0 "Japan demands bases"
+tram.47.d:0 "The Japanese have congratulated us on our seizure of Siberia but the Representative of the Mikado states that we should allow Japan to administer Kamchatka and allow them to establish a naval base in the Sea of Okhotsk."
+tram.47.a:0 "Yes, we still need Japanese protection."
+tram.47.b:0 "It is time to throw off the Japanese yoke!"
+
+tram.48.t:0 "The Japanese are trying to remove Admiral Kolchak!"
+tram.48.d:0 "The Japanese believe Kolchak has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with a more pliant council of business and military leaders."
+tram.48.a:0 "Yes, Kolchak is mad and should be removed!"
+tram.48.b:0 "Kolchak is the Mighty Lord of the East, he stays here!"
+
+tram.49.t:0 "The Japanese are trying to remove Wojciechowski!"
+tram.49.d:0 "The Japanese believe Wojciechowski has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with a Japanase general Yui Mitsue."
+tram.49.a:0 "There nothing we can do..."
+tram.49.b:0 "We'll never allow some old wooden fart be our leader!"
+
+tram.50.t:0 "The Japanese are trying to replace president with Wojciechowski"
+tram.50.d:0 "The Japanese believe president has outlived his usefulness and have approached the elite of Transamur with the plan of backing a coup d'etat to replace him with a more pliant council of business and military leaders."
+tram.50.a:0 "There nothing we can do..."
+tram.50.b:0 "We will fight for our democracy.To arms!"
+
+tram.51.t:0 "Panic in Siberia!"
+tram.51.d:0 "The Siberian government has proven itself unable to maintain the security of its Siberian territories. We have received word that many local leaders want to secede and join Transamur! There may be international complications but we may never get another opportunity like this!"
+tram.51.a:0 "Claim Lake Baikal!"
+tram.51.b:0 "Ask the Japanese Empire for permission."
+tram.51.c:0 "This is a bit risky..."
+
+tram.52.t:0 "Transamur ambitions"
+tram.52.d:0 "The growing instability in Siberia was viewed by the leadership of Transamur as an excellent opportunity to finally take control over Eastern Siberia. An official diplomatic representative from Transamur has come to us seeking permission to use force against Russia if they resist their rightful demands regarding Siberia."
+tram.52.a:0 "Give them the green light."
+tram.52.b:0 "Siberia will remain untouched!"
+
+tram.53.t:0 "Japan has given us a green light"
+tram.53.d:0 "The Japanese government have accepted our proposal and given us a green light to seize Russian Far East from Siberia."
+tram.53.a:0 "Great!"
+
+tram.54.t:0 "Transamur makes its move!"
+tram.54.d:0 "Transamur has sent troops and political specialists into Eastern Siberia, asserting their claim to leadership over the eastern parts of our state. What shall we do?"
+tram.54.a:0 "Let them take Lake Baikal, we must keep our autonomy."
+tram.54.b:0 "No, this is our land!"
+
+tram.55.t:0 "Siberia submits"
+tram.55.d:0 "The new-established regime in Siberia have shown their weakness. They have accepted to return our lands to us."
+tram.55.a:0 "Smart choice"
+
+tram.56.t:0 "Panic in Siberia!"
+tram.56.d:0 "The Russian government has proven itself unable to maintain the security of its Siberian territories. We have received word that many local leaders want to secede and join Transamur! There may be international complications but we may never get another opportunity like this!"
+tram.56.a:0 "Claim Lake Baikal!"
+tram.56.b:0 "Ask the Japanese Empire for permission."
+tram.56.c:0 "This is a bit risky..."
+
+tram.57.t:0 "Transamur ambitions"
+tram.57.d:0 "The growing instability in Siberia was viewed by the leadership of Transamur as an excellent opportunity to finally take control over Eastern Siberia. An official diplomatic representative from Transamur has come to us seeking permission to use force against Russia if they resist their rightful demands regarding Siberia."
+tram.57.a:0 "Give them the green light."
+tram.57.b:0 "Siberia will remain untouched!"
+
+tram.58.t:0 "Japan has given us a green light"
+tram.58.d:0 "The Japanese government have accepted our proposal and given us a green light to seize Russian Far East from Siberia."
+tram.58.a:0 "Great!"
+
+tram.59.t:0 "Transamur makes its move!"
+tram.59.d:0 "Transamur has sent troops and political specialists into Eastern Siberia, asserting their claim to leadership over the eastern parts of our state. What shall we do?"
+tram.59.a:0 "Let them take Lake Baikal."
+tram.59.b:0 "No, this is our land!"
+
+tram.60.t:0 "Russia submits"
+tram.60.d:0 "The new-established regime in Siberia have shown their weakness. They have accepted to return our lands to us."
+tram.60.a:0 "Smart choice"
+
+tram.61.t:0 "Panic in Siberia!"
+tram.61.d:0 "The Soviet government has proven itself unable to maintain the security of its Siberian territories. We have received word that many local leaders want to secede and join Transamur! There may be international complications but we may never get another opportunity like this!"
+tram.61.a:0 "Claim Lake Baikal!"
+tram.61.b:0 "Ask the Japanese Empire for permission."
+tram.61.c:0 "This is a bit risky..."
+
+tram.62.t:0 "Transamur ambitions"
+tram.62.d:0 "The growing instability in Siberia was viewed by the leadership of Transamur as an excellent opportunity to finally take control over Eastern Siberia. An official diplomatic representative from Transamur has come to us seeking permission to use force against Russia if they resist their rightful demands regarding Siberia."
+tram.62.a:0 "Give them the green light."
+tram.62.b:0 "Siberia will remain untouched!"
+
+tram.63.t:0 "Japan has given us a green light"
+tram.63.d:0 "The Japanese government have accepted our proposal and given us a green light to seize Russian Far East from Siberia."
+tram.63.a:0 "Great!"
+
+tram.64.t:0 "Transamur makes its move!"
+tram.64.d:0 "Transamur has sent troops and political specialists into Eastern Siberia, asserting their claim to leadership over the eastern parts of our state. What shall we do?"
+tram.64.a:0 "Let them take Lake Baikal."
+tram.64.b:0 "No, this is our land!"
+
+tram.65.t:0 "Soviet Russia submits"
+tram.65.d:0 "The new-established regime in Siberia have shown their weakness. They have accepted to return our lands to us."
+tram.65.a:0 "Smart choice"
+
 ### Parties ###
 TRM_totalist_party:0 "FETP"
 TRM_radical_socialist_party:0 "TSP"
