"In the news article when Annie Kenney comes to power, it says that she is the only woman that is currently leading a nation; yet the Netherlands has a Queen. Great mod, and i am sure only a massive fan like me would notice this. Thank you for reading."

--- a/localisation/KR_News_l_english.yml
+++ b/localisation/KR_News_l_english.yml
@@ -99,7 +99,7 @@ worldnews.25.d:0 "The 1936 Trade Union Congress in the Union of Britain was made
 worldnews.25.a:0 "Interesting."
 
 worldnews.26.t:0 "Annie Kenney elected as Chairman of the TUC"
-worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union - Maximists, Autonomists, Federationists and Congregationists - to butt heads over the position. \n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Kenney is the only woman country leader on the planet, and her ideology of a radical feminist and egalitarian approach fit this situation."
+worldnews.26.d:0 "The 1936 Trade Union Congress in the Union of Britain was made out to be decisive. Long-time Chairman of the TUC, Philip Snowden, declared his resignation, causing the four major factions in the Union - Maximists, Autonomists, Federationists and Congregationists - to butt heads over the position. \n\nAnd as the dust settled, Annie Kenney, the leader of the Congregationists, was elected as the new Chairman, or Chairwoman in this case. Kenney is one of only a few female leaders on the planet, and her ideology of a radical feminist and egalitarian approach fit this situation."
 worldnews.26.a:0 "Interesting."
 
 worldnews.27.t:0 "Arthur Horner elected as Chairman of the TUC"
