Added a news event for Pius's death - will add more later

--- a/localisation/KR_Italy_l_english.yml
+++ b/localisation/KR_Italy_l_english.yml
@@ -454,8 +454,10 @@ ita.38.t:0 "National Construction Program Finished"
 ita.38.d:0 "The program has been a great success! Not only the population likes the results, but, perhaps even more importantly, the government does. Now, it is time to put our effort elsewhere."
 ita.38.a:0 "Great job, guys!"
 ita.40.t:0 "The Death of Pius XI"
-ita.40.d:0 "Earlier today His Holiness Pope Pius XI passed away to the Afterlife. He had been in declining health for the past several years, and now The Holy Father will soon rest among his predecessors in the Tomb of the Popes. Until the next pope is chosen, the College of Cardinals will jointly rule over Italy."
+ita.40.d:0 "All of [ITA.GetNameDef] mourns the death of His Holiness, Pope Pius XI, who passed away in his sleep after having been in declining health for the past several years. The Holy Father will soon be interred with the rest of his predecessors in the Tomb of the Popes. Until the next pope can be chosen, [ITA.GetNameDef] will be ruled by the College of Cardinals in Rome. The succession of His Holiness is made all the more important due to the Catholic Church's role in governing the nation as well as its vehement opposition to syndicalism, a force which has divided Italy and created the southern breakaway republic."
 ita.40.a:0 "All Christendom mourns the death of His Holiness"
+ita.40.b:0 "If only the Catholic Church could die with him"
+ita.40.c:0 "How terrible"
 ita.41.t:0 "The Death of Pius XI"
 ita.41.d:0 "With the passing of the Pope, what action should we take? Mourn the Pope's death or attempt to install the loyal Duke Giuseppe di Toscana on the throne? Doing so would make [From.GetName] a puppet of Austria, though it would greatly displease the many Catholics of our nation."
 ita.41.a:0 "Send our Condolences to Rome"
